# fastapi_zero

./: .coverage  .dockerignore  .env  .env.example  .gitignore  Dockerfile  compose.yaml  database.db  entrypoint.sh  main.py  pyproject.toml
.github/workflows/: fly-deploy.yml  pipeline.yaml
docs/: requirements-dev.txt  requirements.txt
fastapi_zero/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fastapi_zero.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fastapi_zero/core/: auth.py  security.py  settings.py
fastapi_zero/db/: database.py  models.py
fastapi_zero/routers/: auth.py  todos.py  users.py
fastapi_zero/schemas/: querie.py  todos.py  users.py
infra/docker/: Dockerfile  compose.yaml  entrypoint.sh
infra/fly.io/: fly.toml
migrations/: env.py
migrations/versions/: 335f75e8eb5d_create_todos_table.py  3fccd5d9a11c_create_users_table.py  4e5994a1687f_new_updated_at_camp.py  b9ef6929f7ca_adição_dos_campos_de_created_at_e_.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
tests/performance/: locustfile.py
